update 25th jan/2024

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       >
         <a class="navbar-brand" href="/">
           <img
-            src="./assets/images/shreeji-skyrise-logo.png"
+            src="assets\imagess\Logo (1).png"
             alt="skyrise-logo"
             class="logo-site"
             style="display: block"
@@ -296,9 +296,7 @@
                   alt="Luxurious 2 & 3 BHK"
                 />
                 <div class="media-body">
-                  <h5 class="mt-4 mb-1">
-                    Contemporary design
-                  </h5>
+                  <h5 class="mt-4 mb-1">Contemporary design</h5>
                 </div>
               </li>
               <li class="media my-4 text-center">
@@ -309,9 +307,7 @@
                   alt="2 Eco-deck amenities "
                 />
                 <div class="media-body">
-                  <h5 class="mt-4 mb-1">
-                    23 storey tower
-                  </h5>
+                  <h5 class="mt-4 mb-1">23 storey tower</h5>
                 </div>
               </li>
               <li class="media my-4">
@@ -322,7 +318,9 @@
                   alt="futuristic elevation"
                 />
                 <div class="media-body">
-                  <h5 class="mt-4 mb-1">25+ lifestyle amenities spread over 3 levels</h5>
+                  <h5 class="mt-4 mb-1">
+                    25+ lifestyle amenities spread over 3 levels
+                  </h5>
                 </div>
               </li>
               <li class="media my-4">
@@ -494,9 +492,12 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-12">
-            <h4 class="skyrise-small-subheader">Homes with a big boost for your investment.</h4>
+            <h4 class="skyrise-small-subheader">
+              Homes with a big boost for your investment.
+            </h4>
             <h2 class="skyrise-big-header">
-              Rustomjee Stella comes with over 25+ amenities and friends to enjoy them with.
+              Rustomjee Stella comes with over 25+ amenities and friends to
+              enjoy them with.
             </h2>
             <!--  <p class="skyrise-paragraph-text">An epitome of luxury and class invites you to live your every desire. Be it fitness, relaxation, passion or socialising avenues, here you have an assortment for your every aspiration.</p> -->
           </div>
@@ -875,9 +876,10 @@
                   alt="skyrise-website-connectivity-icon-hospital"
                 />
                 <ul class="nearest-loc">
-                  <li>ACE Heart Hospital - 0.2 km</li>
-                  <li>Namaha Hospital - 1 km</li>
-                  <li>KHM Hospital - 0.6 km</li>
+                  <li>Lifeline Hospital</li>
+                  <li>Gurunanak Hospital</li>
+                  <li>Asian Heart Institute.</li>
+                  <li>Lilavati Hospital</li>
                 </ul>
               </div>
               <div class="col skyrise-con-blocks">
@@ -887,8 +889,8 @@
                   alt="skyrise-website-connectivity-icon-school"
                 />
                 <ul class="nearest-loc">
-                  <li>SVI School & Jr College - 0.7 km</li>
-                  <li>Thakur International School - 1.7 km</li>
+                  <li>Ascend International School</li>
+                  <li>Arya Vidya Mandir</li>
                   <li>Shri T P Bhatia College - 0.9 km</li>
                 </ul>
               </div>
@@ -979,11 +981,17 @@
                   Find A Home To Suit Your Lifestyle
                 </h2>
                 <p class="skyrise-paragraph-text-blue">
-                  Experience the epitome of refinement and comfort while
-                  enjoying the picturesque views of the sky at Codename Skyrise.
-                  Luxurious 2 and 3 BHK flats in Kandivali West have been
-                  designed to optimise your living space and elevate your
-                  overall wellbeing.
+                  A 23-storey standalone tower close to the buzzing
+                  neighbourhood of BKC - that’s just the start of what our
+                  newest landmark, Rustomjee Stella, has in store for you. This
+                  is where you discover a life with shorter commutes to and from
+                  work leave you with all the time you need to enjoy long
+                  breakfasts with the family, after-hours cocktails with
+                  friends, date night dinners, evenings at the movies, weekends
+                  catching the latest plays and art shows or indulging in some
+                  much-needed retail therapy. Rustomjee Stella is truly an
+                  address that gives rise to thoughts like ‘What more could one
+                  ask for?’
                 </p>
               </div>
 
@@ -991,7 +999,7 @@
                 <div class="col-lg-6 col-md-12 col-sm-12 skyrise-config-blocks">
                   <h2 class="skyrise-big-header-blue">2 BHK</h2>
                   <p class="skyrise-paragraph-text-blue">
-                    With & Without Deck <br />715-827 sq.ft.
+                    With & Without Deck <br />659 - 675 Sq.Ft
                   </p>
                   <button
                     type="button"
@@ -1007,7 +1015,7 @@
                   <h2 class="skyrise-big-header-blue">3 BHK</h2>
                   <p class="skyrise-paragraph-text-blue">
                     With & Without Deck <br />
-                    1071-1102 sq.ft.
+                    841 - 922 Sq.Ft
                   </p>
                   <button
                     type="button"
@@ -1070,7 +1078,7 @@
                 class="z-depth-1-half map-container"
               >
                 <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3767.755231963491!2d72.8477241143787!3d19.20589025286885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b76bfa989375%3A0x195713692db1e168!2sShreeji%20Skyrise!5e0!3m2!1sen!2sin!4v1643884227024!5m2!1sen!2sin"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3771.1351086445534!2d72.8439195!3d19.0577964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c9e6a5e8c529%3A0xed1de53fac4bdb6e!2sVinay%20co%20op%20hsg!5e0!3m2!1sen!2sin!4v1705578314848!5m2!1sen!2sin"
                   width="600"
                   height="450"
                   style="border: 0"
@@ -1109,24 +1117,16 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-12">
-            <h4 class="skyrise-small-subheader-blue">ABOUT SHREEJI SHARAN</h4>
-            <h2 class="skyrise-big-header-blue">
+            <h4 class="skyrise-small-subheader-blue">ABOUT RUSTOMJEE</h4>
+            <!-- <h2 class="skyrise-big-header-blue">
               Elevating Mumbai's Skyline With Our Iconic Landmark
-            </h2>
+            </h2> -->
             <p>
-              Shreeji Sharan Group of Companies is recognised for its innovative
-              creations, customer-centric approach, and quality construction.
-              With a team of qualified and experienced professionals, Shreeji
-              Sharan Group of Companies has delivered some of the finest
-              residential properties in suburban Mumbai’s prime locations,
-              including 2, 3 and 4 BHK premium residences in Borivali and
-              Kandivali West.
-              <span style="font-style: italic"
-                >Codename Skyrise is a new upcoming real estate residential
-                project in Kandivali West, Mumbai, by the Shreeji Sharan Group,
-                providing 3 and 2 BHK , and is currently under
-                construction.</span
-              >
+              Whether it’s getting to work or making after-work plans, a home at
+              Rustomjee Stella ensures you spend all your time enjoying the BKC
+              lifestyle. Including family dinners at fine-dining restaurants,
+              movie marathons, music concerts, afternoons at art and culture
+              events. Living here promises to make every day extra-ordinary. 
             </p>
           </div>
         </div>
@@ -1252,7 +1252,7 @@
               </div>
               <div class="col-lg-10 col-12 p-1">
                 <p class="mb-0">
-                  MahaRERA Registration No. P51800032149 available at:
+                  MahaRERA Registration No.: P51800053988. Listed on the website:
                   <span
                     ><br />
                     <a
@@ -1263,9 +1263,9 @@
                     >
                   </span>
                 </p>
-                <a class="footer-link" href="/privacy-policy.html" target=""
+                <!-- <a class="footer-link" href="/privacy-policy.html" target=""
                   >Privacy Policy</a
-                >
+                > -->
               </div>
             </div>
           </div>
@@ -1279,8 +1279,7 @@
             <div>
               <p class="">
                 <span
-                  >Opp Kandivali Fire Station, S.V. Road, Kandivali West, Mumbai
-                  400 067</span
+                  >RUSTOMJEE STELLA, BUILDING NO. 31, Kher Nagar Rd Number 7, Kherwadi, Bandra East, Mumbai, Maharashtra 400051, India</span
                 >
               </p>
             </div>
