--- a/index.html
+++ b/index.html
@@ -891,7 +891,8 @@
                 <ul class="nearest-loc">
                   <li>Ascend International School</li>
                   <li>Arya Vidya Mandir</li>
-                  <li>Shri T P Bhatia College - 0.9 km</li>
+                  <li>Mount Litera International School</li>
+                  <li>L.S. Raheja College</li>
                 </ul>
               </div>
             </div>
@@ -904,9 +905,10 @@
                   alt="skyrise-website-connectivity-icon-truck"
                 />
                 <ul class="nearest-loc">
-                  <li>Link Road - 2.0 km</li>
-                  <li>Kandivali Railway Station - 0.3 km</li>
-                  <li>Western Express Highway - 2.8 km</li>
+                  <li>Western Express Highway 0.45 kms</li>
+                  <li>BKC 1.6 kms</li>
+                  <li>Bandra Railway Station 1.1 kms</li>
+                  <li>Bandra Worli Sea Link 3.5 kms</li>
                 </ul>
               </div>
               <div class="col skyrise-con-blocks">
@@ -931,9 +933,9 @@
                   alt="skyrise-website-connectivity-icon-shopping-cart"
                 />
                 <ul class="nearest-loc">
-                  <li>Growels 101 Mall - 3.2 km</li>
-                  <li>PVR Milap - 1.2 km</li>
-                  <li>DMart - 2.2 km</li>
+                  <li>Jio World Drive</li>
+                  <li>High Street Phoenix</li>
+                  <li>Phoenix Market City</li>
                 </ul>
               </div>
               <div class="col skyrise-con-blocks">
@@ -943,9 +945,9 @@
                   alt="skyrise-website-connectivity-icon-gym"
                 />
                 <ul class="nearest-loc">
-                  <li>Country Club - 0.9 km</li>
-                  <li>MCA Club - 2.2 km</li>
-                  <li>Poisar Gymkhana - 1.5 km</li>
+                  <li>Jio Garden</li>
+                  <li>MIG Club</li>
+                  <li>MCA Club</li>
                 </ul>
               </div>
             </div>
