--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </script>
     <!-- End Google Tag Manager -->
 
-    <title>Shreeji Codename Skyrise | 2,3 BHK in Kandivali West</title>
+    <title>Rustomjee Stella</title>
     <meta
       name="description"
       content="Live an extravagant life through a unique fusion of luxury and convenience with an awe-inspiring view, and experience 30+ world-class amenities at Shreeji Skyrise, Kandivali's finest skyscraper"
