--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     />
     <!-- End of CSS Section -->
 
-    <link rel="canonical" href="https://shreejiskyrise.in/" />
+    <link rel="canonical" href="" />
 
     <!-- Google Tag Manager -->
-    <script>
+    <!-- <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
         w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
@@ -38,13 +38,13 @@
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-MJXNVMF");
-    </script>
+    </script> -->
     <!-- End Google Tag Manager -->
 
     <title>Rustomjee Stella</title>
     <meta
       name="description"
-      content="Live an extravagant life through a unique fusion of luxury and convenience with an awe-inspiring view, and experience 30+ world-class amenities at Shreeji Skyrise, Kandivali's finest skyscraper"
+      content=""
     />
     <link rel="canonical" href="/" />
   </head>
